--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/router": "^6.0.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "ngx-oauth-client": "^0.3.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
